--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default;
+}
 
 :root {
   --background: #ffffff;
@@ -18,4 +22,3 @@
     --foreground: #ededed;
   }
 }
-
